# disperser

./: CMakeLists.txt  README.md  pointvis.m
src/: disperser.cpp
